--- a/index.html
+++ b/index.html
@@ -1,20 +1,107 @@
 <!doctype html>
-<html class="no-js" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation meganeset</title>
-    <link rel="stylesheet" href="stylesheets/app.css" />
-    <script src="bower_components/modernizr/modernizr.js"></script>
-  </head>
-  <body>
-    <div class="row">
-      <div class="large-12 columns">
-        <h1>Megane</h1>
-      </div>
-    </div>
-    <script src="bower_components/jquery/jquery.js"></script>
-    <script src="bower_components/foundation/js/foundation.min.js"></script>
-    <script src="js/app.js"></script>
-  </body>
+<html class="no-js" lang="ja">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Foundation meganeset</title>
+		<link rel="stylesheet" href="stylesheets/app.css" />
+		<script src="bower_components/modernizr/modernizr.js"></script>
+	</head>
+	<body>
+		<div class="contain-to-grid">
+			<nav class="top-bar" data-topbar>
+				<ul class="title-area">
+					<li class="name">
+						<h1><a href="#">My Site</a></h1>
+					</li>
+				</ul>
+				<section class="top-bar-section">
+					<!-- Right Nav Section -->
+					<ul class="right">
+						<li><a href="#">Right Nav Button Active</a></li>
+						<li class="has-dropdown">
+							<a href="#">Right Button with Dropdown</a>
+							<ul class="dropdown">
+								<li><a href="#">First link in dropdown</a></li>
+							</ul>
+						</li>
+					</ul>
+				</section>
+			</nav>
+		</div>
+		<div class="row">
+			<div class="large-12 columns">
+				<h1>Megane</h1>
+				<ul class="example-orbit" data-orbit>
+					<li>
+						<img src="http://placehold.it/1000x500/A92B48/fff" alt="slide 1" />
+						<div class="orbit-caption">
+							Caption One.
+						</div>
+					</li>
+					<li>
+						<img src="http://placehold.it/1000x500/EE964D/fff" alt="slide 2" />
+						<div class="orbit-caption">
+							Caption Two.
+						</div>
+					</li>
+					<li>
+						<img src="http://placehold.it/1000x500/FDC43D/fff" alt="slide 3" />
+						<div class="orbit-caption">
+							Caption Three.
+						</div>
+					</li>
+				</ul>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, cumque, dignissimos, id voluptates adipisci nemo quod laborum totam odit magni iste cum impedit ab unde ullam. Perferendis sapiente distinctio libero.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, cumque, dignissimos, id voluptates adipisci nemo quod laborum totam odit magni iste cum impedit ab unde ullam. Perferendis sapiente distinctio libero.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, cumque, dignissimos, id voluptates adipisci nemo quod laborum totam odit magni iste cum impedit ab unde ullam. Perferendis sapiente distinctio libero.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, cumque, dignissimos, id voluptates adipisci nemo quod laborum totam odit magni iste cum impedit ab unde ullam. Perferendis sapiente distinctio libero.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, cumque, dignissimos, id voluptates adipisci nemo quod laborum totam odit magni iste cum impedit ab unde ullam. Perferendis sapiente distinctio libero.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, cumque, dignissimos, id voluptates adipisci nemo quod laborum totam odit magni iste cum impedit ab unde ullam. Perferendis sapiente distinctio libero.</p>
+				<a href="#" class="button large primary radius">Default Button</a>
+			</div>
+		</div>
+		<div class="row">
+			<div class="large-8 columns">
+				<dl class="tabs" data-tab>
+					<dd class="active"><a href="#panel1">Tab 1</a></dd>
+					<dd><a href="#panel2">Tab 2</a></dd>
+					<dd><a href="#panel3">Tab 3</a></dd>
+					<dd><a href="#panel4">Tab 4</a></dd>
+				</dl>
+				<div class="tabs-content">
+					<div class="content active" id="panel1">
+						<img src="http://placehold.it/800x300/ccc974/fff&text=Logo" alt="">
+						<p>This is the first panel of the basic tab example. This is the first panel of the basic tab example.</p>
+					</div>
+					<div class="content" id="panel2">
+						<img src="http://placehold.it/800x300/cc645a/fff&text=Logo" alt="">
+						<p>This is the second panel of the basic tab example. This is the second panel of the basic tab example.</p>
+					</div>
+					<div class="content" id="panel3">
+						<img src="http://placehold.it/800x300/a87dcc/fff&text=Logo" alt="">
+						<p>This is the third panel of the basic tab example. This is the third panel of the basic tab example.</p>
+					</div>
+					<div class="content" id="panel4">
+						<img src="http://placehold.it/800x300/66bbcc/fff&text=Logo" alt="">
+						<p>This is the fourth panel of the basic tab example. This is the fourth panel of the basic tab example.</p>
+					</div>
+				</div>
+			</div>
+			<div class="large-4 columns">
+				    <!-- Optional Classes: [callout radius] -->
+				<div class="panel">
+				  <h5>This is a callout panel.</h5>
+				  <p>It's a little ostentatious, but useful for important content.</p>
+				</div>
+			</div>
+		</div>
+		<div class="site-footer">
+			<div class="row">
+				<div class="large-12 columns text-center">
+					<p>copyright</p>
+				</div>
+			</div>
+		</div>
+		<script src="bower_components/jquery/jquery.js"></script>
+		<script src="bower_components/foundation/js/foundation.min.js"></script>
+		<script src="js/app.js"></script>
+	</body>
 </html>
