--- a/index.html
+++ b/index.html
@@ -52,10 +52,6 @@
 						</div>
 					</li>
 				</ul>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, cumque, dignissimos, id voluptates adipisci nemo quod laborum totam odit magni iste cum impedit ab unde ullam. Perferendis sapiente distinctio libero.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, cumque, dignissimos, id voluptates adipisci nemo quod laborum totam odit magni iste cum impedit ab unde ullam. Perferendis sapiente distinctio libero.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, cumque, dignissimos, id voluptates adipisci nemo quod laborum totam odit magni iste cum impedit ab unde ullam. Perferendis sapiente distinctio libero.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, cumque, dignissimos, id voluptates adipisci nemo quod laborum totam odit magni iste cum impedit ab unde ullam. Perferendis sapiente distinctio libero.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, cumque, dignissimos, id voluptates adipisci nemo quod laborum totam odit magni iste cum impedit ab unde ullam. Perferendis sapiente distinctio libero.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, cumque, dignissimos, id voluptates adipisci nemo quod laborum totam odit magni iste cum impedit ab unde ullam. Perferendis sapiente distinctio libero.</p>
-				<a href="#" class="button large primary radius">Default Button</a>
 			</div>
 		</div>
 		<div class="row">
@@ -92,6 +88,22 @@
 				  <p>It's a little ostentatious, but useful for important content.</p>
 				</div>
 			</div>
+		</div>
+		<div class="row">
+			<div class="large-4 columns">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, fuga facere assumenda enim porro debitis nemo amet similique dicta nostrum. Quae, distinctio ea repellendus cupiditate labore quaerat sunt ex necessitatibus.</p>
+				<a href="#" class="button">Default Button</a>
+			</div>
+		
+			<div class="large-4 columns">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, fuga facere assumenda enim porro debitis nemo amet similique dicta nostrum. Quae, distinctio ea repellendus cupiditate labore quaerat sunt ex necessitatibus.</p>
+				<a href="#" class="button alert circle">Default Button</a>
+			</div>
+			<div class="large-4 columns">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, fuga facere assumenda enim porro debitis nemo amet similique dicta nostrum. Quae, distinctio ea repellendus cupiditate labore quaerat sunt ex necessitatibus.</p>
+				<a href="#" class="button secondary radius">Default Button</a>
+			</div>
+		
 		</div>
 		<div class="site-footer">
 			<div class="row">
