--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<script src="bower_components/modernizr/modernizr.js"></script>
 	</head>
 	<body>
-		<div class="contain-to-grid">
+		<div class="contain-to-grid fixed">
 			<nav class="top-bar" data-topbar>
 				<ul class="title-area">
 					<li class="name">
@@ -82,11 +82,20 @@
 				</div>
 			</div>
 			<div class="large-4 columns">
-				    <!-- Optional Classes: [callout radius] -->
-				<div class="panel">
-				  <h5>This is a callout panel.</h5>
-				  <p>It's a little ostentatious, but useful for important content.</p>
+				<div class="panel radius">
+					<h5>This is a callout panel.</h5>
+					<p>It's a little ostentatious, but useful for important content.</p>
 				</div>
+				<div id="myModal" class="reveal-modal" data-reveal>
+				  <h2>Awesome. I have it.</h2>
+				  <p class="lead">Your couch.  It is mine.</p>
+				  <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+				  <a class="close-reveal-modal">&#215;</a>
+				</div>
+				<a href="#" data-reveal-id="myModal" class="radius button">Example Modal…</a>
+				<ul class="clearing-thumbs" data-clearing>
+				  <li><a href="http://placehold.it/1000x500/ccc/fff&text=Logo"><img src="http://placehold.it/100x100/ccc/fff&text=Logo"></a></li>
+				</ul>
 			</div>
 		</div>
 		<div class="row">
@@ -94,16 +103,14 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, fuga facere assumenda enim porro debitis nemo amet similique dicta nostrum. Quae, distinctio ea repellendus cupiditate labore quaerat sunt ex necessitatibus.</p>
 				<a href="#" class="button">Default Button</a>
 			</div>
-		
 			<div class="large-4 columns">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, fuga facere assumenda enim porro debitis nemo amet similique dicta nostrum. Quae, distinctio ea repellendus cupiditate labore quaerat sunt ex necessitatibus.</p>
-				<a href="#" class="button alert circle">Default Button</a>
+				<a href="#" class="button alert round">Default Button</a>
 			</div>
 			<div class="large-4 columns">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, fuga facere assumenda enim porro debitis nemo amet similique dicta nostrum. Quae, distinctio ea repellendus cupiditate labore quaerat sunt ex necessitatibus.</p>
 				<a href="#" class="button secondary radius">Default Button</a>
 			</div>
-		
 		</div>
 		<div class="site-footer">
 			<div class="row">
