--- a/index.html
+++ b/index.html
@@ -29,87 +29,138 @@
 				</section>
 			</nav>
 		</div>
-		<div class="row">
-			<div class="large-12 columns">
-				<h1>Megane</h1>
-				<ul class="example-orbit" data-orbit>
-					<li>
-						<img src="http://placehold.it/1000x500/A92B48/fff" alt="slide 1" />
-						<div class="orbit-caption">
-							Caption One.
-						</div>
-					</li>
-					<li>
-						<img src="http://placehold.it/1000x500/EE964D/fff" alt="slide 2" />
-						<div class="orbit-caption">
-							Caption Two.
-						</div>
-					</li>
-					<li>
-						<img src="http://placehold.it/1000x500/FDC43D/fff" alt="slide 3" />
-						<div class="orbit-caption">
-							Caption Three.
-						</div>
-					</li>
-				</ul>
+		<div class="main-img mb">
+			<div class="row">
+				<div class="large-12 columns">
+					<h1>first Message</h1>
+					<h3>you know me</h3>
+				</div>
+			</div>
+		</div>
+		<div class="row mb">
+			<h2 class="title">Keep it Real</h2>
+			<div class="large-4 columns">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, fuga facere assumenda enim porro debitis nemo amet similique dicta nostrum. Quae, distinctio ea repellendus cupiditate labore quaerat sunt ex necessitatibus.</p>
+			</div>
+			<div class="large-4 columns">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, fuga facere assumenda enim porro debitis nemo amet similique dicta nostrum. Quae, distinctio ea repellendus cupiditate labore quaerat sunt ex necessitatibus.</p>
+			</div>
+			<div class="large-4 columns">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, fuga facere assumenda enim porro debitis nemo amet similique dicta nostrum. Quae, distinctio ea repellendus cupiditate labore quaerat sunt ex necessitatibus.</p>
+			</div>
+		</div>
+		<div class="cover mb">
+			<div class="row">
+				<div class="large-12 columns">
+					<h1>first Message</h1>
+					<h3>you know me</h3>
+				</div>
 			</div>
 		</div>
 		<div class="row">
-			<div class="large-8 columns">
-				<dl class="tabs" data-tab>
-					<dd class="active"><a href="#panel1">Tab 1</a></dd>
-					<dd><a href="#panel2">Tab 2</a></dd>
-					<dd><a href="#panel3">Tab 3</a></dd>
-					<dd><a href="#panel4">Tab 4</a></dd>
-				</dl>
-				<div class="tabs-content">
-					<div class="content active" id="panel1">
-						<img src="http://placehold.it/800x300/ccc974/fff&text=Logo" alt="">
-						<p>This is the first panel of the basic tab example. This is the first panel of the basic tab example.</p>
-					</div>
-					<div class="content" id="panel2">
-						<img src="http://placehold.it/800x300/cc645a/fff&text=Logo" alt="">
-						<p>This is the second panel of the basic tab example. This is the second panel of the basic tab example.</p>
-					</div>
-					<div class="content" id="panel3">
-						<img src="http://placehold.it/800x300/a87dcc/fff&text=Logo" alt="">
-						<p>This is the third panel of the basic tab example. This is the third panel of the basic tab example.</p>
-					</div>
-					<div class="content" id="panel4">
-						<img src="http://placehold.it/800x300/66bbcc/fff&text=Logo" alt="">
-						<p>This is the fourth panel of the basic tab example. This is the fourth panel of the basic tab example.</p>
-					</div>
-				</div>
+			<div class="large-6 columns mb">
+				<img src="http://placehold.it/500x500/ccc/fff&text=Logo" alt="">
 			</div>
-			<div class="large-4 columns">
-				<div class="panel radius">
-					<h5>This is a callout panel.</h5>
-					<p>It's a little ostentatious, but useful for important content.</p>
-				</div>
-				<div id="myModal" class="reveal-modal" data-reveal>
-				  <h2>Awesome. I have it.</h2>
-				  <p class="lead">Your couch.  It is mine.</p>
-				  <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
-				  <a class="close-reveal-modal">&#215;</a>
-				</div>
-				<a href="#" data-reveal-id="myModal" class="radius button">Example Modal…</a>
-				<ul class="clearing-thumbs" data-clearing>
-				  <li><a href="http://placehold.it/1000x500/ccc/fff&text=Logo"><img src="http://placehold.it/100x100/ccc/fff&text=Logo"></a></li>
-				</ul>
+			<div class="large-6 columns">
+				<h1>first Message</h1>
+				<h3>you know me</h3>
 			</div>
 		</div>
 		<div class="row">
-			<div class="large-4 columns">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, fuga facere assumenda enim porro debitis nemo amet similique dicta nostrum. Quae, distinctio ea repellendus cupiditate labore quaerat sunt ex necessitatibus.</p>
-				<a href="#" class="button">Default Button</a>
+			<div class="large-6 columns mb">
+				<h1>first Message</h1>
+				<h3>you know me</h3>
 			</div>
-			<div class="large-4 columns">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, fuga facere assumenda enim porro debitis nemo amet similique dicta nostrum. Quae, distinctio ea repellendus cupiditate labore quaerat sunt ex necessitatibus.</p>
-				<a href="#" class="button alert round">Default Button</a>
+			<div class="large-6 columns mb">
+				<img src="http://placehold.it/500x500/ccc/fff&text=Logo" alt="">
 			</div>
-			<div class="large-4 columns">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, fuga facere assumenda enim porro debitis nemo amet similique dicta nostrum. Quae, distinctio ea repellendus cupiditate labore quaerat sunt ex necessitatibus.</p>
-				<a href="#" class="button secondary radius">Default Button</a>
+		</div>
+		<div class="cover nmb">
+			<div class="row">
+				<div class="large-3 columns">
+					<div class="panel np">
+						<img src="http://placehold.it/250x100/ccc/fff&text=Logo" alt="">
+						<h4>aaaaaaa</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi </p>
+					</div>
+				</div>
+				<div class="large-3 columns">
+					<div class="panel np">
+						<img src="http://placehold.it/250x100/ccc/fff&text=Logo" alt="">
+						<h4>aaaaaaa</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi </p>
+					</div>
+				</div>
+				<div class="large-3 columns">
+					<div class="panel np">
+						<img src="http://placehold.it/250x100/ccc/fff&text=Logo" alt="">
+						<h4>aaaaaaa</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi.</p>
+					</div>
+				</div>
+				<div class="large-3 columns">
+					<div class="panel np">
+						<img src="http://placehold.it/250x100/ccc/fff&text=Logo" alt="">
+						<h4>aaaaaaa</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi.</p>
+					</div>
+				</div>
+				<div class="large-3 columns">
+					<div class="panel np">
+						<img src="http://placehold.it/250x100/ccc/fff&text=Logo" alt="">
+						<h4>aaaaaaa</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi </p>
+					</div>
+				</div>
+				<div class="large-3 columns">
+					<div class="panel np">
+						<img src="http://placehold.it/250x100/ccc/fff&text=Logo" alt="">
+						<h4>aaaaaaa</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi </p>
+					</div>
+				</div>
+				<div class="large-3 columns">
+					<div class="panel np">
+						<img src="http://placehold.it/250x100/ccc/fff&text=Logo" alt="">
+						<h4>aaaaaaa</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi.</p>
+					</div>
+				</div>
+				<div class="large-3 columns">
+					<div class="panel np">
+						<img src="http://placehold.it/250x100/ccc/fff&text=Logo" alt="">
+						<h4>aaaaaaa</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi.</p>
+					</div>
+				</div>
+				<div class="large-3 columns">
+					<div class="panel np">
+						<img src="http://placehold.it/250x100/ccc/fff&text=Logo" alt="">
+						<h4>aaaaaaa</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi </p>
+					</div>
+				</div>
+				<div class="large-3 columns">
+					<div class="panel np">
+						<img src="http://placehold.it/250x100/ccc/fff&text=Logo" alt="">
+						<h4>aaaaaaa</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi </p>
+					</div>
+				</div>
+				<div class="large-3 columns">
+					<div class="panel np">
+						<img src="http://placehold.it/250x100/ccc/fff&text=Logo" alt="">
+						<h4>aaaaaaa</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi.</p>
+					</div>
+				</div>
+				<div class="large-3 columns">
+					<div class="panel np">
+						<img src="http://placehold.it/250x100/ccc/fff&text=Logo" alt="">
+						<h4>aaaaaaa</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi.</p>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="site-footer">
