--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class='main-img mb'>
       <div class='row'>
         <div class='large-12 columns'>
-          <h1>first Message</h1>
+          <h1>First Message</h1>
           <h3>you know me</h3>
         </div>
       </div>
@@ -70,7 +70,7 @@
     <div class='cover mb'>
       <div class='row'>
         <div class='large-12 columns'>
-          <h1>first Message</h1>
+          <h1>Second Message</h1>
           <h3>you know me</h3>
         </div>
       </div>
@@ -80,7 +80,7 @@
         <img alt='' src='http://placehold.it/500x500/ccc/fff&amp;text=Logo'>
       </div>
       <div class='large-6 columns'>
-        <h1>first Message</h1>
+        <h1>Third Message</h1>
         <h3>you know me</h3>
       </div>
     </div>
