--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
     <div class='row'>
       <div class='large-6 columns mb'>
-        <img alt='' src='http://placehold.it/500x500/ccc/fff&amp;text=Logo'>
+        <img alt='' src='http://placehold.it/500x500/e58254/fff&amp;text=Logo'>
       </div>
       <div class='large-6 columns'>
         <h1>Third Message</h1>
@@ -88,56 +88,56 @@
       <div class='row'>
         <div class='large-3 columns'>
           <div class='panel np'>
-            <img alt='' src='http://placehold.it/250x100/ccc/fff&amp;text=Logo'>
+            <img alt='' src='http://placehold.it/250x100/7fcc6d/fff&amp;text=Logo'>
             <h4>aaaaaaa</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi</p>
           </div>
         </div>
         <div class='large-3 columns'>
           <div class='panel np'>
-            <img alt='' src='http://placehold.it/250x100/ccc/fff&amp;text=Logo'>
+            <img alt='' src='http://placehold.it/250x100/62cc92/fff&amp;text=Logo'>
             <h4>aaaaaaa</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi</p>
           </div>
         </div>
         <div class='large-3 columns'>
           <div class='panel np'>
-            <img alt='' src='http://placehold.it/250x100/ccc/fff&amp;text=Logo'>
+            <img alt='' src='http://placehold.it/250x100/58c0cc/fff&amp;text=Logo'>
             <h4>aaaaaaa</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi</p>
           </div>
         </div>
         <div class='large-3 columns'>
           <div class='panel np'>
-            <img alt='' src='http://placehold.it/250x100/ccc/fff&amp;text=Logo'>
+            <img alt='' src='http://placehold.it/250x100/5391cc/fff&amp;text=Logo'>
             <h4>aaaaaaa</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi</p>
           </div>
         </div>
         <div class='large-3 columns'>
           <div class='panel np'>
-            <img alt='' src='http://placehold.it/250x100/ccc/fff&amp;text=Logo'>
+            <img alt='' src='http://placehold.it/250x100/817acc/fff&amp;text=Logo'>
             <h4>aaaaaaa</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi</p>
           </div>
         </div>
         <div class='large-3 columns'>
           <div class='panel np'>
-            <img alt='' src='http://placehold.it/250x100/ccc/fff&amp;text=Logo'>
+            <img alt='' src='http://placehold.it/250x100/cb8fcc/fff&amp;text=Logo'>
             <h4>aaaaaaa</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi</p>
           </div>
         </div>
         <div class='large-3 columns'>
           <div class='panel np'>
-            <img alt='' src='http://placehold.it/250x100/ccc/fff&amp;text=Logo'>
+            <img alt='' src='http://placehold.it/250x100/cc8073/fff&amp;text=Logo'>
             <h4>aaaaaaa</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi</p>
           </div>
         </div>
         <div class='large-3 columns'>
           <div class='panel np'>
-            <img alt='' src='http://placehold.it/250x100/ccc/fff&amp;text=Logo'>
+            <img alt='' src='http://placehold.it/250x100/cca262/fff&amp;text=Logo'>
             <h4>aaaaaaa</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, eum, similique, facere officiis odio maiores eligendi</p>
           </div>
