--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <div class='main-img mb'>
       <div class='row'>
         <div class='large-12 columns'>
-          <h1>First Message</h1>
-          <h3>you know me</h3>
+          <h1>FFFFirst Message</h1>
+          <h3>you know me me me me</h3>
         </div>
       </div>
     </div>
