--- a/index-haml.html
+++ b/index-haml.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
-    <title>Foundaton Meganeset</title>
+    <title>Foundaton Meganeset haml</title>
     <link href='stylesheets/app.css' rel='stylesheet'>
     <script src='bower_components/modernizr/modernizr.js'></script>
   </head>
